--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Socket IO Test</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js'></script>
     <script src='js/test.js'></script>
+
   </head>
   <body>
 
@@ -19,11 +20,22 @@
       <div class='row connect-section'>
         <div class='col-md-6'><input value='http://gs.bountyhunt.me' type='text' class='form-control' placeholder='Socket IO Server' id='URL'></div>
         <div class='col-md-1'><button type="button" class="btn btn-success" onclick='connect();' id='connect'>Connect</button></div>
-        <div class='col-md-5'><p id='status-indicator'>Status: <span id='status' class='text-danger'>Disconnected</span></p>
+        <div class='col-md-5'><p id='status-indicator'>Status: <span id='status' class='text-danger'>Disconnected</span></p></div>
+      </div>
+
+      <div class='row'>
+        <div class='col-md-6'>
+        </div>
+        <div class='col-md-6'>
+          <h3>Response:</h3>
+          <div id='server-terminal'>
+          </div>
+          <button type="button" class="btn btn-primary" onclick='clearTerminal();' id='clear'>Clear</button>
+        </div>
       </div>
     </div>
 
 
-
+    <script src='js/terminal.js'></script>
   </body>
 </html>
